# pid_resolver

./: .gitignore  .gitlab-ci.yml  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
app/: main.py  requirements.txt
app/utlis/: pid_analyzer.py  pid_resolver.py
pid_resolver_lib/: __init__.py  cache_handler.py  cli.py  doi_ra_handler.py  helper.py  infer.py  pid_analyzer.py  pid_resolver.py
tests/: __init__.py  test_doi_ra_handler.py  test_pid_analyzer.py  test_pid_resolver.py
tests/testdata/: crossref_test.xml  datacite_test.json  datacite_test_ror.json  medra_test.xml  orcid_test.json  orcid_test2.json  orcid_test3.json
